# koutnet

./: .gitignore  README.md
ABOUT/: ABOUT LEGACY ~  ABOUT NEW CORE  ABOUT NEW CORE~  about-legacy
LEGACY-PYTHON/: gdf.py  gdf_apps.py  gdf_browser.py  gdf_chat.py  gdf_chat.py~  gdf_core.py~  gdf_dialogs.py  gdf_gcc.py  gdf_imports.py  gdf_main.py  gdf_network.py  gdf_ui_base.py
NEWCORE-2-CPP/: CMakeLists.txt  main.cpp
NEWCORE-2-CPP/core/audio/: AudioEngine.cpp  AudioEngine.h  AudioMixer.cpp  AudioMixer.h
NEWCORE-2-CPP/core/chat/: ChatModel.cpp  ChatModel.h  GroupManager.cpp  GroupManager.h  HistoryManager.cpp  HistoryManager.h  MessageEntry.cpp  MessageEntry.h  ReactionStore.cpp  ReactionStore.h  UnreadManager.cpp  UnreadManager.h
NEWCORE-2-CPP/core/constructor/: AppSettings.cpp  AppSettings.h
NEWCORE-2-CPP/core/i18n/: Translations.cpp  Translations.h
NEWCORE-2-CPP/core/security/: CryptoManager.cpp  CryptoManager.h
NEWCORE-2-CPP/core/theme/: ThemeManager.cpp  ThemeManager.h
NEWCORE-2-CPP/network/: FileTransferHandler.cpp  FileTransferHandler.h  NetworkManager.cpp  NetworkManager.h  Protocol.h  VoiceCallManager.cpp  VoiceCallManager.h
NEWCORE-2-CPP/qml/components/: SplashScreen.qml
NEWCORE-2-CPP/qml/main_window/: ChatPage.qml  ContactDelegate.qml  Main.qml  MainChatWindow.qml
NEWCORE-2-CPP/qml/tabs/: CallsTab.qml  NotesTab.qml  PlayerTab.qml  WnsTab.qml
i18n/: ar.json  de.json  en.json  es.json  fr.json  hi.json  it.json  ja.json  pl.json  pt.json  ru.json  tr.json  uk.json  zh.json
